fixed eslint and prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
         "react"
     ],
     "rules": {
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error"
     }
 }
